# soroban-quest

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile  README.md  client.sh  requirements.txt  tasks.json
.devcontainer/: Dockerfile  devcontainer.json  init.sh  onCreate.sh  postAttach.sh  postCreate.sh  update.sh  warpTerm.sh
.devcontainer/dotfiles/: .bashrc  .zshrc  dnote.db  settings.json  tasks.json
.github/: dependabot.yml
client/: auth.ts  package.json  pnpm-lock.yaml  test.ts
client/embedded-discord/: README.md  package-lock.json  package.json  pnpm-lock.yaml
client/embedded-discord/routes/: users.js
quests/1-hello-world/: Cargo.toml  README.md  STORY.md
quests/1-hello-world/src/: lib.rs  test.rs
quests/2-auth-store/: Cargo.toml  README.md
quests/2-auth-store/src/: error.rs  lib.rs  test.rs
quests/3-reverse-engineer/: Cargo.toml  README.md  STORY.md
quests/3-reverse-engineer/src/: lib.rs  test.rs
quests/4-cross-contract/: Cargo.toml  README.md  soroban_auth_store_contract.wasm
quests/4-cross-contract/src/: lib.rs  test.rs
quests/5-custom-types/: README.md
quests/5-custom-types/src/: lib.rs  test.rs  types.rs
quests/6-asset-interop/: Cargo.toml  README.md  STORY.md  soroban_token_spec.wasm
quests/6-asset-interop/py-scripts/: README.md  contract-address.py  contract-key.py  create-token.py  create.py  deploy-contract.py  derive-contract-id-address.py  derive-contract-id.py  invoke-contract.py  pyproject.toml  send-payment.py
quests/6-asset-interop/src/: lib.rs  test.rs
(+1 files in other folders)
