[tool.poetry]
name = "py-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "soroban_py_scripts"}]

[tool.poetry.dependencies]
python = "^3.7"
stellar-sdk = { version = "^9.0.0b0", allow-prereleases = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
