[tool.poetry]
name = "py-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "soroban_py_scripts"}]

[tool.poetry.dependencies]
python = "^3.8"
stellar-sdk = { version = "^9.1.3" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
